--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html>git 
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="./img/image.png" />
-    <link rel="apple-touch-icon" href="./img/image.png" />
+    <link rel="apple-touch-icon" href="./img/img.png" />
     <link rel="stylesheet" href="style.css">
     <title>Image-Slider</title>
 </head>
