--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <img src="./img/Learning Azure DevOps.jpg" width="100%">
         </div>
         <div class="image fade">
+            <img src="./img/Agile Testing.jpg" width="100%">
+        </div>
+        <div class="image fade">
             <img src="./img/sqlbasics.jpg" width="100%">
         </div>
         <div class="image fade">
